--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-router": "^3.6.5",
+    "vuetify": "^2.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -19,6 +21,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.80.6",
+    "sass-loader": "^10.5.2",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
